Ensure the line doesn't wrap on small phones.

--- a/source/assets/stylesheets/partials/_main.scss
+++ b/source/assets/stylesheets/partials/_main.scss
@@ -48,7 +48,7 @@ h1 {
 }
 
 h2 {
-  font-size: 1.25rem;
+  font-size: 1.15rem;
   margin: 2rem 0 .5rem;
 
   @include medium-up { font-size: 1.45rem; }
